# interview-helper

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  streamlit_ui.py
.github/workflows/: docker-image.yml
config/: parameters.py
prompt/: feedback.py  fewshot.py  question.py  summary.py
rag/: loader.py  vector_store.py
workflow/: graph.py  node.py  state.py
