[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-interview"
version = "0.1.0"
description = "Technical interview chatbot using LangChain and Streamlit"
authors = [{name = "mardi2020", email = "ihs221176@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.14",
    "aiosignal==1.4.0",
    "altair==5.5.0",
    "annotated-types==0.7.0",
    "anthropic==0.57.1",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "blinker==1.9.0",
    "cachetools==6.1.0",
    "certifi==2025.7.9",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "dataclasses-json==0.6.7",
    "deepl==1.22.0",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "faiss-cpu==1.11.0",
    "feedparser==6.0.11",
    "frozenlist==1.7.0",
    "gitdb==4.0.12",
    "GitPython==3.1.44",
    "googleapis-common-protos==1.70.0",
    "grpcio==1.73.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "idna==3.10",
    "Jinja2==3.1.6",
    "jiter==0.10.0",
    "joblib==1.5.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "kiwipiepy==0.21.0",
    "kiwipiepy_model==0.21.0",
    "langchain==0.3.26",
    "langchain-community==0.3.27",
    "langchain-core==0.3.68",
    "langchain-openai==0.3.27",
    "langchain-teddynote==0.3.45",
    "langchain-text-splitters==0.3.8",
    "langgraph==0.5.2",
    "langgraph-checkpoint==2.1.0",
    "langgraph-prebuilt==0.5.2",
    "langgraph-sdk==0.1.72",
    "langsmith==0.4.5",
    "lz4==4.4.4",
    "MarkupSafe==3.0.2",
    "marshmallow==3.26.1",
    "mmh3==4.1.0",
    "multidict==6.6.3",
    "mypy_extensions==1.1.0",
    "narwhals==1.46.0",
    "nltk==3.9.1",
    "numpy==1.26.4",
    "olefile==0.47",
    "openai==1.95.1",
    "orjson==3.10.18",
    "ormsgpack==1.10.0",
    "packaging==24.2",
    "pandas==2.3.1",
    "pdf2image==1.17.0",
    "pillow==11.3.0",
    "pinecone-client==6.0.0",
    "pinecone-plugin-interface==0.0.7",
    "pinecone-text==0.10.0",
    "propcache==0.3.2",
    "protobuf==5.29.5",
    "protoc-gen-openapiv2==0.0.1",
    "pyarrow==20.0.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "pydantic_core==2.33.2",
    "pydeck==0.9.1",
    "PyMuPDF==1.26.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "PyYAML==6.0.2",
    "rank-bm25==0.2.2",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "requests-toolbelt==1.0.0",
    "rpds-py==0.26.0",
    "sgmllib3k==1.0.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.41",
    "streamlit==1.46.1",
    "tavily-python==0.7.9",
    "tenacity==9.1.2",
    "tiktoken==0.9.0",
    "toml==0.10.2",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "types-requests==2.32.4.20250611",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.1",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "utils==1.0.2",
    "xxhash==3.5.0",
    "yarl==1.20.1",
    "zstandard==0.23.0"
]
